# server/openapi.yaml
@@ -9,7 +9,7 @@ info:
   license:
     name: Apache 2.0
     url: https://www.apache.org/licenses/LICENSE-2.0.html
-  version: 1.2.1
+  version: 1.3.0
 tags:
   - name: users
     description: Secured User-only calls
@@ -30,10 +30,10 @@ paths:
             schema:
               type: object
               required:
-                - user
+                - username
                 - password
               properties:
-                user:
+                username:
                   example: "Max13"
                   type: string
                 password:
@@ -413,7 +413,7 @@ paths:
 
   /user:
     get:
-      summary: get users by email or username
+      summary: get users by email OR username
       operationId: GetUsers
       description: |
         Get user information matching the given username or email address
@@ -445,9 +445,7 @@ paths:
                     items:
                       $ref: '#/components/schemas/User'
         '400':
-          description: neither username nor email provided
-        '404':
-          description: no user found
+          description: neither username nor email provided or both username and email provided
 
   /game/{id}:
     get:
